[package]
name = "counter_project_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
[dependencies]
candid = "0.10"           # For Candid serialization
ic-cdk = "0.16"           # Internet Computer CDK
ic-cdk-macros = "0.16"    # Macros for update/query functions
serde = "1.0"             # Serialization/Deserialization
serde_json = "1.0"        # JSON support
